<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:contentPadding="20dp">

               <TextView
                   android:id="@+id/txt1"
                   android:layout_width="match_parent"
                   android:layout_height="30dp"
                   android:layout_marginLeft="8dp"
                   android:layout_marginRight="8dp"
                   android:text="@string/q1"
                   android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

               <TextView
                   android:id="@+id/txt2"
                   android:layout_width="match_parent"
                   android:layout_height="30dp"
                   android:layout_marginLeft="8dp"
                   android:layout_marginRight="8dp"
                   android:layout_marginTop="38dp"
                   android:text="@string/ans1" />

           </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentPadding="20dp">

                <TextView
                    android:id="@+id/txt3"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/q2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/txt4"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="38dp"
                    android:text="@string/ans2" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentPadding="20dp">

                <TextView
                    android:id="@+id/txt5"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/q3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/txt6"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="38dp"
                    android:text="@string/ans3" />

            </android.support.v7.widget.CardView>



        </LinearLayout>
    </ScrollView>
</RelativeLayout>